# TrilhaBackEndJR-JUN15

./: README.md  main.db  pyproject.toml
app/: __init__.py  security.py
app/constants/: task.py  user.py
app/controllers/: __init__.py  task.py  user.py
app/database/: __init__.py
app/models/: __init__.py  task.py  user.py
app/schemas/: task.py  user.py
src/database/: sql.py
